# ElaboratoLab

./: CMakeLists.txt  Cell.cpp  Cell.h  Formula.cpp  Formula.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Observer.h  Subject.h  Sum.cpp  Sum.h  main.cpp
